--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
 
           <div class="card__face card__face--back">
-            <img src="" alt="" />
+            <img src="" alt="" name="slide" />
           </div>
         </div>
       </div>
@@ -37,7 +37,9 @@
             <h2>2</h2>
           </div>
 
-          <div class="card__face card__face--back"><img src="" alt="" /></div>
+          <div class="card__face card__face--back">
+            <img src="" alt="" name="slide" />
+          </div>
         </div>
       </div>
 
@@ -47,7 +49,9 @@
             <h2>3</h2>
           </div>
 
-          <div class="card__face card__face--back"><img src="" alt="" /></div>
+          <div class="card__face card__face--back">
+            <img src="" alt="" name="slide" />
+          </div>
         </div>
       </div>
 
@@ -57,7 +61,9 @@
             <h2>4</h2>
           </div>
 
-          <div class="card__face card__face--back"><img src="" alt="" /></div>
+          <div class="card__face card__face--back">
+            <img src="" alt="" name="slide" />
+          </div>
         </div>
       </div>
 
@@ -67,7 +73,9 @@
             <h2>5</h2>
           </div>
 
-          <div class="card__face card__face--back"><img src="" alt="" /></div>
+          <div class="card__face card__face--back">
+            <img src="" alt="" name="slide" />
+          </div>
         </div>
       </div>
 
@@ -77,7 +85,9 @@
             <h2>6</h2>
           </div>
 
-          <div class="card__face card__face--back"><img src="" alt="" /></div>
+          <div class="card__face card__face--back">
+            <img src="" alt="" name="slide" />
+          </div>
         </div>
       </div>
 
@@ -87,7 +97,9 @@
             <h2>7</h2>
           </div>
 
-          <div class="card__face card__face--back"><img src="" alt="" /></div>
+          <div class="card__face card__face--back">
+            <img src="" alt="" name="slide" />
+          </div>
         </div>
       </div>
 
@@ -97,7 +109,9 @@
             <h2>8</h2>
           </div>
 
-          <div class="card__face card__face--back"><img src="" alt="" /></div>
+          <div class="card__face card__face--back">
+            <img src="" alt="" name="slide" />
+          </div>
         </div>
       </div>
 
@@ -107,7 +121,9 @@
             <h2>9</h2>
           </div>
 
-          <div class="card__face card__face--back"><img src="" alt="" /></div>
+          <div class="card__face card__face--back">
+            <img src="" alt="" name="slide" />
+          </div>
         </div>
       </div>
 
@@ -117,7 +133,9 @@
             <h2>10</h2>
           </div>
 
-          <div class="card__face card__face--back"><img src="" alt="" /></div>
+          <div class="card__face card__face--back">
+            <img src="" alt="" name="slide" />
+          </div>
         </div>
       </div>
 
@@ -127,7 +145,9 @@
             <h2>11</h2>
           </div>
 
-          <div class="card__face card__face--back"><img src="" alt="" /></div>
+          <div class="card__face card__face--back">
+            <img src="" alt="" name="slide" />
+          </div>
         </div>
       </div>
 
@@ -137,7 +157,9 @@
             <h2>12</h2>
           </div>
 
-          <div class="card__face card__face--back"><img src="" alt="" /></div>
+          <div class="card__face card__face--back">
+            <img src="" alt="" name="slide" />
+          </div>
         </div>
       </div>
 
