new js functions
alert Congratulations! and new game button, cleaned code, added comments

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <h1>Memory Game</h1>
+    <button class="new-game-button">New Game</button>
     <div class="card__container">
       <div class="card">
         <div class="card__inner">
@@ -26,7 +27,7 @@
           </div>
 
           <div class="card__face card__face--back">
-            <img src="" alt="" name="slide" />
+            <img src="" alt="picture of the animal" />
           </div>
         </div>
       </div>
@@ -38,7 +39,7 @@
           </div>
 
           <div class="card__face card__face--back">
-            <img src="" alt="" name="slide" />
+            <img src="" alt="picture of the animal" />
           </div>
         </div>
       </div>
@@ -50,7 +51,7 @@
           </div>
 
           <div class="card__face card__face--back">
-            <img src="" alt="" name="slide" />
+            <img src="" alt="picture of the animal" />
           </div>
         </div>
       </div>
@@ -62,7 +63,7 @@
           </div>
 
           <div class="card__face card__face--back">
-            <img src="" alt="" name="slide" />
+            <img src="" alt="picture of the animal" />
           </div>
         </div>
       </div>
@@ -74,7 +75,7 @@
           </div>
 
           <div class="card__face card__face--back">
-            <img src="" alt="" name="slide" />
+            <img src="" alt="picture of the animal" />
           </div>
         </div>
       </div>
@@ -86,7 +87,7 @@
           </div>
 
           <div class="card__face card__face--back">
-            <img src="" alt="" name="slide" />
+            <img src="" alt="picture of the animal" />
           </div>
         </div>
       </div>
@@ -98,7 +99,7 @@
           </div>
 
           <div class="card__face card__face--back">
-            <img src="" alt="" name="slide" />
+            <img src="" alt="picture of the animal" />
           </div>
         </div>
       </div>
@@ -110,7 +111,7 @@
           </div>
 
           <div class="card__face card__face--back">
-            <img src="" alt="" name="slide" />
+            <img src="" alt="picture of the animal" />
           </div>
         </div>
       </div>
@@ -122,7 +123,7 @@
           </div>
 
           <div class="card__face card__face--back">
-            <img src="" alt="" name="slide" />
+            <img src="" alt="picture of the animal" />
           </div>
         </div>
       </div>
@@ -134,7 +135,7 @@
           </div>
 
           <div class="card__face card__face--back">
-            <img src="" alt="" name="slide" />
+            <img src="" alt="picture of the animal" />
           </div>
         </div>
       </div>
@@ -146,7 +147,7 @@
           </div>
 
           <div class="card__face card__face--back">
-            <img src="" alt="" name="slide" />
+            <img src="" alt="picture of the animal" />
           </div>
         </div>
       </div>
@@ -158,78 +159,10 @@
           </div>
 
           <div class="card__face card__face--back">
-            <img src="" alt="" name="slide" />
+            <img src="" alt="picture of the animal" />
           </div>
         </div>
       </div>
-
-      <!-- <div class="card">
-        <div class="card__inner">
-          <div class="card__face card__face--front">
-            <h2>13</h2>
-          </div>
-
-          <div class="card__face card__face--back">
-            <p>
-              Хорошая хозяйка Тося Кислицына славилась тем, что может из обычной
-              картошки приготовить огромное количество блюд. Но ей далеко до
-              хорошей еврейской хозяйки, которая может из одной курицы создать
-              как минимум 6 шедевров. А какая вы хозяйка? (в вашем холодильнике
-              есть пара луковиц, картофелин, морковок, немного крупы, специй и
-              даже лавровый лист). <span>🍗</span>
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card__inner">
-          <div class="card__face card__face--front">
-            <h2>14</h2>
-          </div>
-
-          <div class="card__face card__face--back">
-            <p>Ситуативный вопрос</p>
-            <p>
-              Накануне праздника Пэсах вы избавились от всего хамеца в доме,
-              однако забыли заглянуть в рюкзак своего 8-го младшенького. На
-              третий день Пэсаха вы почуяли странный запах и это оказалась
-              надкусанная и забытая пита с хумусом. Что вы будете делать?
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card__inner">
-          <div class="card__face card__face--front">
-            <h2>15</h2>
-          </div>
-
-          <div class="card__face card__face--back">
-            <p>Правда или Действие</p>
-            <p>
-              Религиозный мужчина не может выгуливать суку во время течки.<span
-                >🐩</span
-              >
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card__inner">
-          <div class="card__face card__face--front">
-            <h2>16</h2>
-          </div>
-
-          <div class="card__face card__face--back">
-            <p>
-              Назовите 3 отличия от еврейского религиозного банка от
-              общенационального.<span>💸</span>
-            </p>
-          </div>
-        </div>
-      </div> -->
     </div>
     <script src="main.js"></script>
   </body>
