--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@
     <h1>Memory Game</h1>
     <button class="new-game-button">New Game</button>
     <div class="card__container">
-      <div class="card">
+      <p>kek</p>
+      <!-- <div class="card">
         <div class="card__inner">
           <div class="card__face card__face--front">
-            <h2>1</h2>
+            <h2></h2>
           </div>
 
           <div class="card__face card__face--back">
             <img src="" alt="picture of the animal" />
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="card">
+      <!-- <div class="card">
         <div class="card__inner">
           <div class="card__face card__face--front">
             <h2>2</h2>
@@ -162,7 +163,7 @@
             <img src="" alt="picture of the animal" />
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <script src="main.js"></script>
   </body>
